--- a/CSE237-FinalProject/.classpath
+++ b/CSE237-FinalProject/.classpath
@@ -61,5 +61,10 @@
 	<classpathentry kind="lib" path="GoogleCloud/org/codehaus/mojo/animal-sniffer-annotations/1.18/animal-sniffer-annotations-1.18.jar"/>
 	<classpathentry kind="lib" path="GoogleCloud/org/conscrypt/conscrypt-openjdk-uber/2.2.1/conscrypt-openjdk-uber-2.2.1.jar"/>
 	<classpathentry kind="lib" path="GoogleCloud/org/threeten/threetenbp/1.4.2/threetenbp-1.4.2.jar"/>
+	<classpathentry kind="con" path="com.google.cloud.tools.eclipse.appengine.libraries/master-container">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
